cif/org.eclipse.escet.cif.tests/tests/event_based/supervisor_synthesis/sup_evt_not_in_plant1.run.err
ERROR: Failed to create supervisor for CIF file "event_based/supervisor_synthesis/sup_evt_not_in_plant1.cif".
CAUSE: CIF supervisor synthesis tool failed due to unsatisfied preconditions:

  --------------------------------------------------------------------------
  (1/1) Event is in the requirement alphabet, but not in the plant alphabet.
  --------------------------------------------------------------------------
   * In automaton "r":
     - controllable e3;
                    ^
